removing image border in carousel

--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -34,7 +34,7 @@
     width: 99%;
     height: 99%;
     border-radius: 8px;
-    border: #ff00008e solid 2px;
+    /*border: #ff00008e solid 2px;*/
   }
   .slide_direction {
     display: flex;
